logs/action_web_build_main_system.log
2026-02-23 20:28:05,851 - ERROR - Compilation failed for main:
2026-02-23 20:28:05,851 - ERROR - shared:INFO: (Emscripten: Running sanity checks)
/home/runner/work/NextSSL/NextSSL/src/primitives/ecc/elligator2/elligator2.c:88:36: error: unknown type name 'size_t'
   88 | static void wipe_buffer(void *buf, size_t size) {
      |                                    ^
1 error generated.
emcc: error: '/home/runner/work/NextSSL/NextSSL/emsdk/upstream/bin/clang -target wasm32-unknown-emscripten -fignore-exceptions -mllvm -combiner-global-alias-analysis=false -mllvm -enable-emscripten-sjlj -mllvm -disable-lsr --sysroot=/home/runner/work/NextSSL/NextSSL/emsdk/upstream/emscripten/cache/sysroot -DEMSCRIPTEN -Werror=implicit-function-declaration -Xclang -iwithsysroot/include/fakesdl -Xclang -iwithsysroot/include/compat -O2 -Wall -I/home/runner/work/NextSSL/NextSSL/src -I/home/runner/work/NextSSL/NextSSL/src/include -I/home/runner/work/NextSSL/NextSSL/src/primitives -I/home/runner/work/NextSSL/NextSSL/src/primitives/hash/fast/blake3 -I/home/runner/work/NextSSL/NextSSL/src/primitives/hash/memory_hard/utils -I/home/runner/work/NextSSL/NextSSL/src/legacy/alive -I/home/runner/work/NextSSL/NextSSL/src/legacy/unsafe -I/home/runner/work/NextSSL/NextSSL/src/utils -I/home/runner/work/NextSSL/NextSSL/src/primitives/cipher/aes_core -I/home/runner/work/NextSSL/NextSSL/src/primitives/cipher -I/home/runner/work/NextSSL/NextSSL/src/primitives/aead -I/home/runner/work/NextSSL/NextSSL/src/primitives/mac -I/home/runner/work/NextSSL/NextSSL/src/primitives/aead/chacha20_poly1305 -I/home/runner/work/NextSSL/NextSSL/src/primitives/ecc/ed25519 -I/home/runner/work/NextSSL/NextSSL/src/primitives/ecc/curve448 -I/home/runner/work/NextSSL/NextSSL/src/primitives/ecc/elligator2 -I/home/runner/work/NextSSL/NextSSL/src/primitives/ecc/ristretto255 -I/home/runner/work/NextSSL/NextSSL/src/PQCrypto/common -I/home/runner/work/NextSSL/NextSSL/src/primitives/hash/sponge_xof/shake -I/home/runner/work/NextSSL/NextSSL/src/PQCrypto/crypto_kem -I/home/runner/work/NextSSL/NextSSL/src/PQCrypto/crypto_sign -I/home/runner/work/NextSSL/NextSSL/src/PQCrypto/common -I/home/runner/work/NextSSL/NextSSL/src/utils/pqc -I/home/runner/work/NextSSL/NextSSL/src -DBLAKE3_NO_AVX2 -DBLAKE3_NO_AVX512 -DBLAKE3_NO_SSE2 -DBLAKE3_NO_SSE41 -DBLAKE3_NO_THREADING -DBLAKE3_ATOMICS=0 -DAES___=128 -DFF_X=1 -DHAVE_ED448=1 -DDHCM_VERSION_MAJOR=1 -DDHCM_VERSION_MINOR=0 -DDHCM_ENABLE_PRIMITIVE_FAST -DDHCM_ENABLE_PRIMITIVE_MEMORY_HARD -DDHCM_ENABLE_PRIMITIVE_SPONGE_XOF -DDHCM_ENABLE_LEGACY_ALIVE -DDHCM_ENABLE_LEGACY_UNSAFE -DPOW_ENABLE_SERVER -DPOW_ENABLE_CLIENT -DPOW_ENABLE_PRIMITIVE_FAST -DPOW_ENABLE_PRIMITIVE_MEMORY_HARD -DPOW_ENABLE_PRIMITIVE_SPONGE_XOF -DPOW_ENABLE_LEGACY_ALIVE -DPOW_ENABLE_LEGACY_UNSAFE -DPOW_NO_GENERIC_API -DENABLE_ML_KEM -DENABLE_HQC -DENABLE_MCELIECE -DENABLE_ML_DSA -DENABLE_FALCON -DENABLE_SPHINCS /home/runner/work/NextSSL/NextSSL/src/primitives/ecc/elligator2/elligator2.c -c -o /tmp/emscripten_temp_gq3le9a6/elligator2_16.o' failed (returned 1)

